# STALINGRAD

./: .gitignore  Changelog  Makefile.in  README  README.md  autogen.sh  building  configure.ac  environment.sh  run-tests.scm  stalingrad-build-steps  test-driver.scm
examples/: addition.vlad  archive  backprop.vlad  bug-a.vlad  bug-b.vlad  bug-c.vlad  bug0.vlad  bug1.vlad  bug2.vlad  bug3.vlad  bug4.vlad  commute.sc  commute.vlad  density  derivative.sc  dn.vlad  double-agent.vlad  double.vlad  even-odd.sc  example.vlad  factor16.vlad  factorial.sc  gaussian.text  gaussian.vlad  hessian.vlad  j.vlad  make-clean  marble.vlad  math-fast.vlad  math-faster.vlad  math-fastest.vlad  math-forward.vlad  math.vlad  one-offs.vlad  particle.vlad  post-compile  post-compile-link-density  prefix.vlad  regression-test  run  (+17 more)
from-jeff/: install-686  install-amd64  install-arm  install-solaris
infrastructure-1.27/: FREEBSD-15mar93.patches  LINUX-15mar93.patches  README  SOL2-15mar93.patches  alpha-linux.S  apply.c  apply.h  architecture-path  archive-date  build  cio-linux.c  cio-sparc.c  heap-linux.c  heap-linux.h  linux.s  makefile  makefile-alpha-linux-cdecl  makefile-alpha-linux-scsc  makefile-alpha-linux-server  makefile-alpha-linux-test  makefile-alpha-linux-xlib  makefile-aosf-cdecl  makefile-aosf-scrt  makefile-aosf-scsc  makefile-aosf-test  makefile-aosf-xlib  makefile-irix5-cdecl  makefile-irix5-scrt  makefile-irix5-scsc  makefile-irix5-test  makefile-irix5-xlib  makefile-linux-cdecl  makefile-linux-egcs-cdecl  makefile-linux-egcs-scsc  makefile-linux-egcs-server  makefile-linux-egcs-test  makefile-linux-egcs-xlib  makefile-linux-scsc  makefile-linux-server  makefile-linux-test  (+10 more)
map-closure/: closure.vlad  makefile  map-closure.sc  map-closurelib-stuff.sc  run-tests  set-bang.vlad  set.vlad
source/: .cvsignore  .gitignore  Makefile.in  Makefile.print  c-externals.sc  makefile  qobi.mk  stalingrad.sc  stalingradlib-double-c.c  stalingradlib-stuff.sc  unbuff.c
test-runs/: .gitignore
tool/: failure-summary  one-test  test-driver  test-driver-scm.scm  test-driver.scm  test-failures  test-setup  test-timings  tests-running
tools/: Makefile  README  mplayerwin.c  one-test  sum.sc  test-driver  test-driver.scm  unbuff.c  (+3 more)
(+619 files in other folders)
